; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_blockonkeys.c_bpopgt_timeout_callback.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_blockonkeys.c_bpopgt_timeout_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"Request timedout\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bpopgt_timeout_callback(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32**, i32*** %5, align 8
  %8 = ptrtoint i32** %7 to i32
  %9 = call i32 @REDISMODULE_NOT_USED(i32 %8)
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @REDISMODULE_NOT_USED(i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @RedisModule_ReplyWithSimpleString(i32* %12, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  ret i32 %13
}

declare dso_local i32 @REDISMODULE_NOT_USED(i32) #1

declare dso_local i32 @RedisModule_ReplyWithSimpleString(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
